chore(css): attempt to fix black stripes with video full-bleed and logo adjustments

--- a/styles.css
+++ b/styles.css
@@ -141,6 +141,7 @@ h4.log{
     position: relative;
     align-items: center;
     min-height: 100vh;
+    width: 100%;
     overflow: hidden;
 }
 
